[package]
name = "rustberry"
version = "0.1.0"
authors = ["Flynn Dreilinger <flynnd@stanford.edu>", "Ashish Rao <aprao@stanford.edu>", "Xiluo He <xiluohe@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# panic = "abort" # disable stack unwinding on panic
lto = true

[profile.dev]
opt-level = 0
# panic = "abort" # disable stack unwinding on panic

[features]
default = []
bsp_rpiA = []

[dependencies]
embedded-graphics = "0.6.2"